# dev-tools

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  README.md  activate  build.sh  pyproject.toml
configs/clang/: .clangd
configs/cmake/: build_env.example
configs/code/: code.tar.xz
configs/py/: requirements.txt
configs/ssh/: hosts.map.example
configs/vim/: .vimrc
install/: install_system.sh  install_system.sh.bak  install_user.sh  install_user.sh.bak
scripts/bash/find_network/: find_network.sh
scripts/cpp/dst/: print_directory_structure  vscode_config_manager
scripts/cpp/src/print_directory_structure/: print_directory_structure.cpp
scripts/cpp/src/vscode_config_manager/: vscode_config_manager.cpp
scripts/py/: cpp_impact.py
test/python/: test.py  test2.py
